--- a/UI/jobs-ui/public/index.html
+++ b/UI/jobs-ui/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <meta name="traceparent" content="00-ab42124a3c573678d4d8b21ba52df3bf-d21f7bc17caa5aba-01">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
